GNOME Bugzilla – Bug 720338
Crash when closing http connection to CUPS
Last modified: 2013-12-14 21:33:56 UTC
Created attachment 264093 [details] [review] Don't double free connection to CUPS It seems that it can happen that http connection to CUPS is freed twice according backtrace in these two bugs: https://bugzilla.redhat.com/show_bug.cgi?id=985272 and https://bugzilla.redhat.com/show_bug.cgi?id=1039766. Unfortunately, I'm not able to simulate the problem now. The only way how this could happen (at least I think so) is that the connection which was created outside of GtkCupsRequest's functions is closed in a GtkCupsRequest function (_post_check or _get_check in this case). Gtk's CUPS module already has a mechanism for handling this. It is a boolean named "own_http" in GtkCupsRequest. The attached patch checks this boolean before closing the connection in _post_check and _get_check. Marek